[FIX] Navbar overflow - Kali

--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -223,6 +223,12 @@
     }
 }
 
+.name {
+    @media screen and (max-width: 640px) {
+        display: none;
+    }
+}
+
 .hamburger {
     &_button {
         display: none !important;
